...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars = "vertical"
            android:padding="@dimen/fab_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_subject_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/objet"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:textColor="@color/colorText"
                    android:textStyle="bold" />

...
                        android:paddingTop="@dimen/fab_margin"
                        android:paddingBottom="@dimen/fab_margin" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_contributor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:hint="@string/participant"
                app:endIconDrawable="@drawable/ic_add"
...
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/containedButton"
                style="@style/Theme.Mareu.field"
                android:text="@string/btn_check_register"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
