<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        android:title="Filter"
        app:showAsAction="always">
        <menu>
            <item android:title="Trier par Date"
                android:id="@+id/filter_date" />
            <item android:title="Trier par Salle"
                android:id="@+id/filter_venue"/>
        </menu>
    </item>

</menu>